Implementação dos outros metodos, DELETE, PUT e PATCH nos controller e services Hotel